fixed height of chat popup on mobile device again!

--- a/src/index.css
+++ b/src/index.css
@@ -332,7 +332,7 @@ input:focus{
 /* -------------------------------Media Query------------------------------- */
 
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 576px) {
 
 
   .mainNav{
@@ -343,6 +343,9 @@ input:focus{
   }
   .intro{
     padding: 0 5px;
+  }
+  .intro h1{
+    font-size: xx-large;
   }
   .intro img{
     width: 100%;
@@ -379,10 +382,9 @@ input:focus{
     /* position: absolute; */
     position: fixed;
     z-index: 2;
-    width: 40%;
+    width: 100%;
     bottom: 0;
     right: 0;
-    border: 1px solid red;
     background-color: #e2e2e2;
     margin-right: 15px;
     color: black;
@@ -573,7 +575,6 @@ input:focus{
     width: 100%;
     bottom: 0;
     right: 0;
-    border: 1px solid red;
     margin-right: 0px;
     margin-left: 0px;
     color: black;
